--- a/play/PsypmUHR/index.html
+++ b/play/PsypmUHR/index.html
@@ -567,7 +567,7 @@ body.playing.artist-idol .play-btn {
 <script>
 /* ===== アルバム定義 ===== */
 const albums = {
-  大阪1部: [
+  大阪一部: [
   { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
   { id:"J0kmYFO0UTI", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
   { id:"mwoVhIUMX58", title:"ダーリンダンス", artist:"水篠 瀀 × りをん", platform:"youtube" },
@@ -589,7 +589,7 @@ const albums = {
   { id:"pwLP3GDIhAk", title:"Secret Answer", artist:"REBEL", platform:"youtube" },
   { id:"_j0kfGNwIlw", title:"チュルリラ・チュルリラ・ダッダッダ", artist:"REBEL", platform:"youtube" }
   ],
-  大阪2部: [
+  大阪二部: [
   { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
   { id:"J0kmYFO0UTI", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
   { id:"Ja9qmYjXk6U", title:"太陽系デスコ", artist:"ふぉるて × 水篠瀀", platform:"youtube" },
@@ -610,7 +610,7 @@ const albums = {
   { id:"Y9QFjorZWg4", title:"CocktaiL", artist:"REBEL", platform:"youtube" },
   { id:"_j0kfGNwIlw", title:"チュルリラ・チュルリラ・ダッダッダ", artist:"REBEL", platform:"youtube" }
   ],
-  東京1部: [
+  東京一部: [
   { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
   { id:"i-DZukWFR64", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
   { id:"mwoVhIUMX58", title:"ダーリンダンス", artist:"水篠瀀 × りをん", platform:"youtube" },
@@ -631,7 +631,7 @@ const albums = {
   { id:"pwLP3GDIhAk", title:"Secret Answer", artist:"REBEL", platform:"youtube" },
   { id:"b2GJcYBoVyg", title:"神のまにまに", artist:"REBEL", platform:"youtube" }
   ],
-  東京2部: [
+  東京二部: [
   { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
   { id:"i-DZukWFR64", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
   { id:"Ja9qmYjXk6U", title:"太陽系デスコ", artist:"ふぉるて × 水篠瀀", platform:"youtube" },
