--- a/play/PsypmUHR/index.html
+++ b/play/PsypmUHR/index.html
@@ -666,7 +666,7 @@ const albums = {
   ]
 };
 
-let currentAlbumKey = "AlbumA";
+let currentAlbumKey = "大阪1部";
 let album = albums[currentAlbumKey];
 let player, index = 0;
 let playing = false, seeking = false;
