--- a/play/PsypmUHR/index.html
+++ b/play/PsypmUHR/index.html
@@ -53,6 +53,9 @@ body {
   padding: 20px;
   transition: right 0.35s ease;
   z-index: 35;
+
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .playlist.open { right: 0; }
 .track {
