--- a/play/NAAPGSKk/index.html
+++ b/play/NAAPGSKk/index.html
@@ -53,6 +53,9 @@ body {
   padding: 20px;
   transition: right 0.35s ease;
   z-index: 35;
+
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .playlist.open { right: 0; }
 .track {
@@ -669,7 +672,7 @@ const albums = {
   ]
 };
 
-let currentAlbumKey = "AlbumA";
+let currentAlbumKey = "大阪1部";
 let album = albums[currentAlbumKey];
 let player, index = 0;
 let playing = false, seeking = false;
