--- a/play/PsypmUHR/index.html
+++ b/play/PsypmUHR/index.html
@@ -585,7 +585,7 @@ const albums = {
    { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
    { id:"srH34Tjjo9U", title:"フィクサー", artist:"aoru × xea ", platform:"youtube" },
-   { id:"DgmPyanqjbA", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+   { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
    { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
    { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
@@ -606,7 +606,7 @@ const albums = {
    { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
    { id:"KuI5I5q990Y", title:"バッド・ダンス・ホール", artist:"水篠瀀", platform:"youtube" },
-   { id:"DgmPyanqjbA", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+   { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
    { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
    { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
@@ -627,7 +627,7 @@ const albums = {
    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
    { id:"KuI5I5q990Y", title:"バッド・ダンス・ホール", artist:"水篠 瀀", platform:"youtube" },
    { id:"srH34Tjjo9U", title:"フィクサー", artist:"aoru × xea", platform:"youtube" },
-   { id:"DgmPyanqjbA", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+   { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
    { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
    { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
@@ -648,7 +648,7 @@ const albums = {
    { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
    { id:"C-o8pTi6vd8", title:"狂乱 Hey Kids!!", artist:"水篠 瀀", platform:"youtube" },
-   { id:"DgmPyanqjbA", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+   { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
    { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
    { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
