--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -53,6 +53,9 @@ body {
   padding: 20px;
   transition: right 0.35s ease;
   z-index: 35;
+
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .playlist.open { right: 0; }
 .track {
@@ -115,7 +118,10 @@ body {
   width: 360px;
   height: 202px;
 }
-
+.video.interactive {
+  pointer-events: auto;
+}
+  
 /* ===== CD ===== */
 .cd {
   position: absolute;
@@ -520,9 +526,10 @@ body.playing.artist-idol .play-btn {
 
 <div class="container">
   <div class="stage">
-    <div id="player" class="video"></div>
+    <div id="ytPlayer" class="video"></div>
+    <div id="nicoPlayer" class="video" style="display:none"></div>
     <div id="cd" class="cd"></div>
-  </div>
+</div>
 
   <!-- ▼ 曲名タップでYouTubeへ（ここだけ変更） -->
   <div class="title">
@@ -563,29 +570,100 @@ body.playing.artist-idol .play-btn {
 <script>
 /* ===== アルバム定義 ===== */
 const albums = {
-  AlbumA: [
-    { id:"HCoTcCMLRsM", title:"Q", artist:"REBEL" },
-    { id:"p8iNb7sTNiY", title:"ロストワンの号哭", artist:"REBEL" }
+  大阪1部: [
+  { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
+  { id:"J0kmYFO0UTI", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
+  { id:"mwoVhIUMX58", title:"ダーリンダンス", artist:"水篠 瀀 × りをん", platform:"youtube" },
+  { id:"8xc20yXXRCI", title:"シュガーサーフ", artist:"xea", platform:"youtube" },
+  { id:"1RAjpiiUWcM", title:"クイーンオブハート", artist:"りをん", platform:"youtube" },
+  { id:"4uXtuKnRf2U", title:"ファタール", artist:"ふぉるて × aoru ", platform:"youtube" },
+  { id:"5U6FfWMz3Io", title:"by your side", artist:"ふぉるて", platform:"youtube" },
+  { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀", platform:"youtube" },
+  { id:"tUXvfybhkxI", title:"ファーストレディー", artist:"aoru", platform:"youtube" },
+  { id:"URjLQ-wvEWY", title:"白い雪のプリンセスは-Re:incarnation-", artist:"りをん", platform:"youtube" },
+  { id:"piiLCXxSkfc", title:"ライカ", artist:"xea", platform:"youtube" },
+  { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
+  { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
+  { id:"srH34Tjjo9U", title:"フィクサー", artist:"aoru × xea ", platform:"youtube" },
+  { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+  { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
+  { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
+  { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
+  { id:"pwLP3GDIhAk", title:"Secret Answer", artist:"REBEL", platform:"youtube" },
+  { id:"_j0kfGNwIlw", title:"チュルリラ・チュルリラ・ダッダッダ", artist:"REBEL", platform:"youtube" }
   ],
-  AlbumB: [
+  大阪2部: [
+  { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
+  { id:"J0kmYFO0UTI", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
+  { id:"Ja9qmYjXk6U", title:"太陽系デスコ", artist:"ふぉるて × 水篠瀀", platform:"youtube" },
+  { id:"sm42112160", title:"ワールズエンド・ダンスホール", artist:"aoru", platform:"nicovideo" },
+  { id:"8xc20yXXRCI", title:"シュガーサーフ", artist:"xea", platform:"youtube" },
+  { id:"V06rTnZBNn4", title:"ファタール", artist:"りをん × xea", platform:"youtube" },
+  { id:"fAbO6CV7Qko", title:"サリシノハラ", artist:"ふぉるて", platform:"youtube" },
+  { id:"fsuMM4lkMCU", title:"ヴァンパイア", artist:"水篠 瀀", platform:"youtube" },
+  { id:"yKVSXiehcnw", title:"ルームNo.4", artist:"りをん", platform:"youtube" },
+  { id:"KAoY-tK1l0o", title:"カルチャ", artist:"aoru × 水篠瀀", platform:"youtube" },
+  { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
+  { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
+  { id:"KuI5I5q990Y", title:"バッド・ダンス・ホール", artist:"水篠瀀", platform:"youtube" },
+  { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+  { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
+  { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
+  { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
+  { id:"Y9QFjorZWg4", title:"CocktaiL", artist:"REBEL", platform:"youtube" },
+  { id:"_j0kfGNwIlw", title:"チュルリラ・チュルリラ・ダッダッダ", artist:"REBEL", platform:"youtube" }
+  ],
+  東京1部: [
+  { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
+  { id:"i-DZukWFR64", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
+  { id:"mwoVhIUMX58", title:"ダーリンダンス", artist:"水篠瀀 × りをん", platform:"youtube" },
+  { id:"8xc20yXXRCI", title:"シュガーサーフ", artist:"xea", platform:"youtube" },
+  { id:"1RAjpiiUWcM", title:"クイーンオブハート", artist:"りをん", platform:"youtube" },
+  { id:"4uXtuKnRf2U", title:"ファタール", artist:"aoru × ふぉるて", platform:"youtube" },
+  { id:"7hdMJZ7wpP0", title:"by your side", artist:"ふぉるて", platform:"youtube" },
+  { id:"sm23949752", title:"〇〇〇〇〇", artist:"aoru", platform:"nicovideo" },
+  { id:"wH8Z6PE_w2M", title:"おやすみ泣き声、さよなら歌姫", artist:"xea", platform:"youtube" },
+  { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
+  { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
+  { id:"KuI5I5q990Y", title:"バッド・ダンス・ホール", artist:"水篠 瀀", platform:"youtube" },
+  { id:"srH34Tjjo9U", title:"フィクサー", artist:"aoru × xea", platform:"youtube" },
+  { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+  { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
+  { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
+  { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
+  { id:"pwLP3GDIhAk", title:"Secret Answer", artist:"REBEL", platform:"youtube" },
+  { id:"b2GJcYBoVyg", title:"神のまにまに", artist:"REBEL", platform:"youtube" }
+  ],
+  東京2部: [
+  { id:"emrt46SRyYs", title:"DAYBREAKFRONTLINE", artist:"REBEL", platform:"youtube" },
+  { id:"i-DZukWFR64", title:"テレキャスタービーボーイ", artist:"水篠 瀀", platform:"youtube" },
+  { id:"Ja9qmYjXk6U", title:"太陽系デスコ", artist:"ふぉるて × 水篠瀀", platform:"youtube" },
+  { id:"sm42112160", title:"ワールズエンド・ダンスホール", artist:"aoru", platform:"nicovideo" },
+  { id:"8xc20yXXRCI", title:"シュガーサーフ", artist:"xea", platform:"youtube" },
+  { id:"V06rTnZBNn4", title:"ファタール", artist:"りをん × xea", platform:"youtube" },
+  { id:"oDyizPvIavk", title:"ヨンジュウナナ", artist:"ふぉるて", platform:"youtube" },
+  { id:"2G-H4Uw59PQ", title:"ヴァンパイア", artist:"xea", platform:"youtube" },
+  { id:"yKVSXiehcnw", title:"ルームNo.4", artist:"りをん", platform:"youtube" },
+  { id:"KAoY-tK1l0o", title:"カルチャ", artist:"aoru × 水篠瀀", platform:"youtube" },
+  { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ", platform:"youtube" },
+  { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部", platform:"youtube" },
+  { id:"C-o8pTi6vd8", title:"狂乱 Hey Kids!!", artist:"水篠 瀀", platform:"youtube" },
+  { id:"OedSp40TKHo", title:"右肩の蝶", artist:"りをん", platform:"youtube" },
+  { id:"TK1SMvjSATE", title:"ラヴィ", artist:"ふぉるて", platform:"youtube" },
+  { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru", platform:"youtube" },
+  { id:"EcyPCQ4cMdA", title:"Real Face", artist:"REBEL", platform:"youtube" },
+  { id:"Y9QFjorZWg4", title:"CocktaiL", artist:"REBEL", platform:"youtube" },
+  { id:"b2GJcYBoVyg", title:"神のまにまに", artist:"REBEL", platform:"youtube" }
+  ],
+  REBELおまけ: [
     { id:"uC44M7_srjg", title:"DOGLAND", artist:"REBEL" },
-    { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ" },
-    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部" },
-    { id:"RqltfjkkJJk", title:"ホメオスタシス", artist:"ふぉるて" },
-    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru" },
-    { id:"lhGiqShlmzo", title:"ヤミタイガール", artist:"xea" },
-    { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
-    { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
-  ],
-  aoru: [
-  { id:"qZ-pTHuUFQQ", title:"初体験", artist:"aoru" },
-  { id:"ATFrhDgPCZ0", title:"Wolf!?。", artist:"aoru" }
+    { id:"p8iNb7sTNiY", title:"ロストワンの号哭", artist:"REBEL" },
+    { id:"HCoTcCMLRsM", title:"Q", artist:"REBEL" }
   ]
 };
 
-let currentAlbumKey = "AlbumA";
+let currentAlbumKey = "大阪1部";
 let album = albums[currentAlbumKey];
-
 let player, index = 0;
 let playing = false, seeking = false;
 let rotationTimer = null;
@@ -629,10 +707,10 @@ function renderAlbums(){
 
 /* ===== YouTube ===== */
 function onYouTubeIframeAPIReady() {
-  player = new YT.Player("player", {
-    videoId: album[0].id,
-    playerVars: { playsinline: 1, controls: 0 },
-    events: { onReady, onStateChange }
+  player = new YT.Player("ytPlayer", {
+  videoId: album[0].id,
+  playerVars: { playsinline: 1, controls: 0 },
+  events: { onReady, onStateChange }
   });
 }
 
@@ -656,7 +734,14 @@ function onStateChange(e) {
 }
 
 /* ===== 再生 ===== */
-function toggle() { playing ? pause() : play(); }
+function toggle() {
+  const track = album[index];
+  if (track.platform === "nicovideo") {
+    // ニコニコは iframe 側の操作に任せる
+    return;
+  }
+  playing ? pause() : play();
+}
 
 function play() {
   player.playVideo();
@@ -721,15 +806,56 @@ function loop() {
 /* ===== 曲操作 ===== */
 function loadTrack(i) {
   index = i;
+  const track = album[index];
+
   stopRotation();
-  player.setVolume(0);
-  player.loadVideoById(album[index].id);
-  updateInfo();
-  renderList();
   playing = false;
   playIcon.style.display = "block";
   pauseIcon.style.display = "none";
   document.body.classList.remove("playing");
+
+  const yt = document.getElementById("ytPlayer");
+  const nico = document.getElementById("nicoPlayer");
+
+  if (track.platform === "nicovideo") {
+  // YouTube 停止 & 非表示
+  if (player && player.stopVideo) player.stopVideo();
+  yt.style.display = "none";
+
+  // Nico 表示 & 操作可能に
+  nico.style.display = "block";
+  nico.classList.add("interactive");
+
+  nico.innerHTML = `
+    <iframe
+      src="https://embed.nicovideo.jp/watch/${track.id}"
+      width="100%"
+      height="100%"
+      frameborder="0"
+      allowfullscreen>
+    </iframe>
+  `;
+
+    // UI無効化
+    seekbar.value = 0;
+    seekbar.style.setProperty("--progress", "0%");
+    current.textContent = "0:00";
+    duration.textContent = "--:--";
+
+  } else {
+  // Nico 非表示 & 操作不可
+  nico.style.display = "none";
+  nico.classList.remove("interactive");
+  nico.innerHTML = "";
+
+  // YouTube 表示
+  yt.style.display = "block";
+  player.loadVideoById(track.id);
+  player.setVolume(0);
+  }
+
+  updateInfo();
+  renderList();
 }
 function next() { loadTrack((index + 1) % album.length); }
 function prev() { loadTrack((index - 1 + album.length) % album.length); }
@@ -752,9 +878,18 @@ function toggleList() {
 
 /* ===== 情報 ===== */
 function updateInfo() {
-  title.textContent = album[index].title;
-  artist.textContent = album[index].artist;
-  titleLink.href = "https://www.youtube.com/watch?v=" + album[index].id;
+  const track = album[index];
+
+  title.textContent = track.title;
+  artist.textContent = track.artist;
+
+  if (track.platform === "nicovideo") {
+    titleLink.href = "https://www.nicovideo.jp/watch/" + track.id;
+  } else {
+    titleLink.href = "https://www.youtube.com/watch?v=" + track.id;
+  }
+
+  applyArtistTheme(track.artist);
 }
 
 function format(sec) {
@@ -785,15 +920,6 @@ function applyArtistTheme(artist) {
   document.body.classList.add(theme.className);
 }
 
-function updateInfo() {
-  const track = album[index];
-
-  title.textContent = track.title;
-  artist.textContent = track.artist;
-  titleLink.href = "https://www.youtube.com/watch?v=" + track.id;
-
-  applyArtistTheme(track.artist);
-}
 
 function applyArtistTheme(artistName) {
   // 既存テーマを全削除
@@ -810,5 +936,3 @@ function applyArtistTheme(artistName) {
 
 </body>
 </html>
-
-
