--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -581,7 +581,7 @@ body.playing.artist-idol .play-btn {
       </button>
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
-        <svg viewBox="0 0 24 24"><path d="M16 3h5v5l-1.79-1.79-4.83 4.83-1.42-1.42 4.83-4.83L16 3zm-8 2.41 1.41 1.41-6 6L3 13.41l6-6zM16 16l2.41 2.41-4.83-4.83 1.42-1.42 4.83 4.83L21 16v5h-5l1.79-1.79-4.83-4.83 1.42-1.42L16 16z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M4 4h2.5l5 5-1.4 1.4-4.1-4.1H4V4zm0 14h2.5l4.1-4.1 1.4 1.4-5 5H4v-2zm13-14h3v3l-1.5-1.5-4.6 4.6-1.4-1.4 4.6-4.6L17 4zm0 16l1.5-1.5-4.6-4.6 1.4-1.4 4.6 4.6L20 17v3h-3z"/></svg>
       </button>
     </div>
 
