--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -581,7 +581,7 @@ body.playing.artist-idol .play-btn {
       </button>
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
-        <svg viewBox="0 0 24 24"><path d="M4 4h2.5l5 5-1.4 1.4-4.1-4.1H4V4zm0 14h2.5l4.1-4.1 1.4 1.4-5 5H4v-2zm13-14h3v3l-1.5-1.5-4.6 4.6-1.4-1.4 4.6-4.6L17 4zm0 16l1.5-1.5-4.6-4.6 1.4-1.4 4.6 4.6L20 17v3h-3z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M3 7h3l4 4-1.4 1.4L5.6 9H3V7zm0 10h3l4-4-1.4-1.4L5.6 15H3v2zm12-10h2v2l-3-3 3-3v2h-2l-4 4 1.4 1.4L15 7zm0 10l-3-3-1.4 1.4 4 4h2v2l3-3-3-3v2h-2z"/></svg>
       </button>
     </div>
 
