--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -581,7 +581,7 @@ body.playing.artist-idol .play-btn {
       </button>
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
-        <svg viewBox="0 0 24 24"><path d="M3 7h3l4 4-1.4 1.4L5.6 9H3V7zm0 10h3l4-4-1.4-1.4L5.6 15H3v2zm12-10h2v2l-3-3 3-3v2h-2l-4 4 1.4 1.4L15 7zm0 10l-3-3-1.4 1.4 4 4h2v2l3-3-3-3v2h-2z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M4 6h4l4 4-1.4 1.4L7.4 8H4V6zm0 12h4l4-4-1.4-1.4L7.4 16H4v2zm10-12h3V4l4 4-4 4V10h-3l-4 4 1.4 1.4L14 6z"/></svg>
       </button>
     </div>
 
