--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -581,7 +581,16 @@ body.playing.artist-idol .play-btn {
       </button>
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
-        <svg viewBox="0 0 24 24"><path d="M4 7h5l4 4-1.4 1.4L8.4 9H4V7zm0 10h5l4-4-1.4-1.4L8.4 15H4v2zm11-10h2V5l4 4-4 4V11h-2l-4 4 1.4 1.4L15 7z"/></svg>
+        <svg viewBox="0 0 24 24" fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round">
+          <path d="M4 6h5l8 8" />
+          <path d="M4 18h5l4-4" />
+          <path d="M15 6h3v3" />
+          <path d="M15 6l5 5" />
+        </svg>
       </button>
     </div>
 
