--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -484,10 +484,14 @@ body.playing.artist-idol .play-btn {
 }
 
 #shuffleBtn {
+  width: 24px;
+  height: 24px;
   opacity: 0.4;
 }
 
 #shuffleBtn.active {
+  width: 24px;
+  height: 24px;
   opacity: 1;
   filter: drop-shadow(0 0 6px rgba(255,255,255,.6));
 }
@@ -583,7 +587,7 @@ body.playing.artist-idol .play-btn {
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
         <svg viewBox="0 0 24 24" fill="none"
             stroke="currentColor"
-            stroke-width="2"
+            stroke-width="3"
             stroke-linecap="round"
             stroke-linejoin="round">
           <path d="M4 6h5l8 8" />
