--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -585,15 +585,8 @@ body.playing.artist-idol .play-btn {
       </button>
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
-        <svg viewBox="0 0 24 24" fill="none"
-            stroke="currentColor"
-            stroke-width="3"
-            stroke-linecap="round"
-            stroke-linejoin="round">
-          <path d="M4 6h5l8 8" />
-          <path d="M4 18h5l4-4" />
-          <path d="M15 6h3v3" />
-          <path d="M15 6l5 5" />
+        <svg viewBox="0 0 24 24">
+          <path d="M4 7h5l4 4-2 2-3-3H4V7zm0 10h5l3-3 2 2-4 4H4v-3zm11-10h3V4l4 4-4 4V9h-3l-4 4-2-2 6-6z"/>
         </svg>
       </button>
     </div>
