--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -586,7 +586,7 @@ body.playing.artist-idol .play-btn {
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
         <svg viewBox="0 0 24 24">
-          <path d="M16 3h5v5l-1.79-1.79-4.83 4.83-1.42-1.42 4.83-4.83L16 3zm-8 2.41 1.41 1.41-6 6L3 13.41l6-6zM16 16l2.41 2.41-4.83-4.83 1.42-1.42 4.83 4.83L21 16v5h-5l1.79-1.79-4.83-4.83 1.42-1.42L16 16z"/>
+          <path d="M4 6h8v3l4-4-4-4v3H2v6h2V6z M4 18h8v-3l4 4-4 4v-3H2v-6h2v4z"/>
         </svg>
       </button>
     </div>
