--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -586,7 +586,7 @@ body.playing.artist-idol .play-btn {
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
         <svg viewBox="0 0 24 24">
-          <path d="M4 6h8v3l4-4-4-4v3H2v6h2V6z M4 18h8v-3l4 4-4 4v-3H2v-6h2v4z"/>
+          <path d="M3 6h7l4 4-2 2-3-3H3V6z M3 18h7l3-3 2 2-4 4H3v-3z M14 6h3V3l4 4-4 4V8h-3l-5 5-2-2 7-7"/>
         </svg>
       </button>
     </div>
