--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -586,7 +586,7 @@ body.playing.artist-idol .play-btn {
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
         <svg viewBox="0 0 24 24">
-          <path d="M3 6h7l4 4-2 2-3-3H3V6z M3 18h7l3-3 2 2-4 4H3v-3z M14 6h3V3l4 4-4 4V8h-3l-5 5-2-2 7-7"/>
+          <path d="M3 7h7l4 4-2 2-3-3H3V7z M3 17h7l3-3 2 2-4 4H3v-3z M14 7h3V4l4 4-4 4V9h-3l-4 4-2-2 6-6z"/>
         </svg>
       </button>
     </div>
