--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -190,12 +190,7 @@ body {
   margin-bottom: 10px;
 }
 
-.icon-btn {
-  width: 36px;
-  height: 36px;
-  align-items: center;
-  justify-content: center;
-}
+.icon-btn,
 
 .play-btn {
   background: none;
