--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -583,7 +583,19 @@ body.playing.artist-idol .play-btn {
 
       <button class="icon-btn" id="shuffleBtn" onclick="toggleShuffle()">
         <svg viewBox="0 0 24 24">
-          <path d="M3 7h7l4 4-2 2-3-3H3V7z M3 17h7l3-3 2 2-4 4H3v-3z M14 7h3V4l4 4-4 4V9h-3l-4 4-2-2 6-6z"/>
+          <!-- 奥（下の矢印） -->
+          <path
+            d="M3 17h7l3-3 2 2-4 4H3v-3z"
+            fill="currentColor"
+            opacity="0.6"
+          />
+
+          <!-- 手前（上の矢印） -->
+          <path
+            d="M3 7h7l4 4-2 2-3-3H3V7z
+            M14 7h3V4l4 4-4 4V9h-3l-4 4-2-2 6-6z"
+            fill="currentColor"
+          />
         </svg>
       </button>
     </div>
