--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -194,7 +194,18 @@ body {
   margin-bottom: 10px;
 }
 
-.icon-btn,
+.icon-btn {
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #b3b3b3;
+}
+
+.icon-btn.active {
+  color: #1db954;
+}
 
 .play-btn {
   background: none;
