--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -201,6 +201,9 @@ body {
   align-items: center;
   justify-content: center;
   color: #b3b3b3;
+  background: none;
+  border: none;
+  outline: none;
 }
 
 .icon-btn.active {
