--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -6,7 +6,7 @@
   rel="stylesheet"
 />
 <link rel="manifest" href="/manifest.json">
-<link rel="apple-touch-icon" href="/icon-512.PNG">
+<link rel="apple-touch-icon" href="/icon-512.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="theme-color" content="#111111">
