--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -5,7 +5,7 @@
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
   rel="stylesheet"
 />
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="./manifest.json">
 <link rel="apple-touch-icon" href="/icon-512.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
